add Sign All batch signing, resolve dest wallet, improve import/HW support
Sign All opens each unsigned PSBT sequentially in a tab for signing,
auto-advancing to the next after each signature. Cancels gracefully
if user closes tab without signing.

Also: resolveDestWallet for persistence/import, HW_AIRGAPPED support,
JSON-only import, uniform row height in both tables.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>